@@ -40,7 +40,7 @@
 # define UNUSED 
 #endif
 
-#define UNREFERENCED_PARAMETER(a) {(a)=(a);}
+#define UNREFERENCED_PARAMETER(a) {(void) (a);}
 
 #if !defined(TRUE)
 # define TRUE (1==1)
