@@ -2,6 +2,7 @@
 ChangeLog
    [ + added, - removed, * changed ]
 
+   * (28/Mar/2011) Support for XL -qdebug=function_trace
    * (23/Mar/2011) Several fixes to revive CBEA support
    * (22/Mar/2011) Increase buffer size to 500k elements
    * (03/Mar/2011) Fix communication between threads (i.e. task != 1 is sending
